@@ -11,6 +11,7 @@ export("?", .AtNames, .DollarNames, .S3methods, .romans, Rprof, Rprofmem,
        aspell_write_personal_dictionary_file, available.packages,
        browseEnv, browseURL, browseVignettes, bug.report,
        capture.output, changedFiles, charClass, checkCRAN,
+       .checkHT,
        chooseBioCmirror, chooseCRANmirror, citation, cite, citeNatbib,
        citEntry, citHeader, citFooter, close.socket, combn,
        compareVersion, contrib.url, count.fields, create.post, data,
